--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,3 +62,22 @@ jobs:
             ${{ env.IMAGE_NAME }}:latest
             ghcr.io/${{ env.IMAGE_NAME }}:cxx${{ github.event.inputs.CMAKE_CXX_STANDARD }}_ROOT${{ github.event.inputs.ROOT_VERSION }}_Geant4${{ github.event.inputs.GEANT4_VERSION }}
             ghcr.io/${{ env.IMAGE_NAME }}:latest
+
+      - name: Build and Push base development Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: development/Dockerfile
+          push: true
+          pull: true
+          build-args: |
+            CMAKE_CXX_STANDARD=${{ github.event.inputs.CMAKE_CXX_STANDARD }}
+            ROOT_VERSION=${{ github.event.inputs.ROOT_VERSION }}
+            GEANT4_VERSION=${{ github.event.inputs.GEANT4_VERSION }}
+            PASSWORD=${{ secrets.DEVELOPMENT_PASSWORD }}
+            SSH_PUBLIC_KEY=${{ secrets.SSH_PUBLIC_KEY }}
+          tags: |
+            ${{ env.IMAGE_NAME }}-dev:cxx${{ github.event.inputs.CMAKE_CXX_STANDARD }}_ROOT${{ github.event.inputs.ROOT_VERSION }}_Geant4${{ github.event.inputs.GEANT4_VERSION }}
+            ${{ env.IMAGE_NAME }}-dev:latest
+            ghcr.io/${{ env.IMAGE_NAME }}-dev:cxx${{ github.event.inputs.CMAKE_CXX_STANDARD }}_ROOT${{ github.event.inputs.ROOT_VERSION }}_Geant4${{ github.event.inputs.GEANT4_VERSION }}
+            ghcr.io/${{ env.IMAGE_NAME }}-dev:latest
