--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,7 +48,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push base Docker image
+      - name: Build and Push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -63,7 +63,7 @@ jobs:
             ghcr.io/${{ env.IMAGE_NAME }}:cxx${{ github.event.inputs.CMAKE_CXX_STANDARD }}_ROOT${{ github.event.inputs.ROOT_VERSION }}_Geant4${{ github.event.inputs.GEANT4_VERSION }}
             ghcr.io/${{ env.IMAGE_NAME }}:latest
 
-      - name: Build and Push base development Docker image
+      - name: Build and Push development Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
