--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -20,6 +20,13 @@ jobs:
       image: ghcr.io/lobis/root-geant4-garfield${{ github.event.inputs.tag }}
 
     steps:
+      - name: Print environment variables
+        run: |
+          echo $LD_LIBRARY_PATH
+          echo $ROOTSYS
+          printenv | grep G4
+          printenv
+
       - name: Check ROOT is available in non-interactive shell
         run: |
           root-config --version
