--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,5 +1,9 @@
 name: Verify Docker Image
 
+defaults:
+  run:
+    shell: bash
+    
 on:
   workflow_run:
     workflows: ["Build and Publish Docker Image"]
