--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Verify Docker Image
+name: Test Docker Image
 
 on:
   workflow_run:
@@ -14,7 +14,7 @@ on:
         default: ":latest"
 
 jobs:
-  verify:
+  test:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/lobis/root-geant4-garfield${{ github.event.inputs.tag }}
@@ -38,10 +38,23 @@ jobs:
           geant4-config --version
           geant4-config --prefix
           geant4-config --cflags
+          geant4-config --datasets
 
       - name: Check ROOT
         run: |
           root -e 'TTree tree; return 0;' -q
+
+      - name: Check Geant4 by building and runing a basic example
+        run: |
+          G4_VERSION=$(geant4-config --version)
+          G4_INSTALL=$(geant4-config --prefix)
+          G4_EXAMPLES=${G4_INSTALL}/share/Geant4-${G4_VERSION}/examples
+          echo "Geant4 examples dir: $G4_EXAMPLES"
+          cd $G4_EXAMPLES/basic/B1
+          mkdir build && cd build
+          cmake ..
+          make
+          ./exampleB1 run1.mac
 
       - name: Check Garfield is available from ROOT prompt
         run: |
