--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,8 +22,8 @@ on:
 
       target:
         required: true
-        description: Name of the runner to build the image on
-        default: ubuntu-latest
+        description: Name of the runner to build the image on (self-hosted, ubuntu-latest, ...)
+        default: self-hosted
 
 env:
   IMAGE_NAME: lobis/root-geant4-garfield
@@ -77,7 +77,7 @@ jobs:
           context: .
           file: utils/Dockerfile
           push: true
-          pull: true
+          pull: false
           tags: |
             ${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }}
             ${{ env.IMAGE_NAME }}:latest
