--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update \
 # Jupyter
 RUN pip3 -q install pip --upgrade && \
     pip3 list --outdated --format=freeze | grep -v "^\-e" | cut -d = -f 1 | xargs -n1 pip3 -q install && \
-    pip3 -q install uproot awkward matplotlib scipy pandas mplhep boost_histogram \
+    pip3 -q install uproot awkward metakernel matplotlib scipy pandas mplhep boost_histogram \
     numba==0.53 jupyterlab jupyterlab_code_formatter black isort autopep8
 
 RUN mkdir -p /root/Notebooks
