--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -14,7 +14,7 @@ ARG SSH_PUBLIC_KEY=""
 RUN DEBIAN_FRONTEND="noninteractive" apt-get update && apt-get -y install tzdata
 
 RUN apt-get update \
-    && apt-get install -y sudo ssh xauth xorg build-essential gcc g++ gdb clang cmake rsync tar python nano x11-apps xdg-utils nodejs screen \
+    && apt-get install -y sudo ssh xauth xorg build-essential gcc g++ gdb clang cmake rsync tar python nano x11-apps nodejs screen \
     && apt-get upgrade -y && apt-get clean
 
 # ROOT
