--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,6 +62,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.CONTAINER_REGISTRY_GITHUB_TOKEN }}
 
+      - name: test step
+        if: ${{ github.event.inputs.rest-for-physics }}
+        run: echo "flag set to true"
+
       - name: Build parent image
         uses: docker/build-push-action@v2
         with:
