--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -67,6 +67,7 @@ jobs:
         with:
           context: .
           push: false
+          pull: false
           build-args: |
             CMAKE_CXX_STANDARD=${{ github.event.inputs.CMAKE_CXX_STANDARD }}
             ROOT_VERSION=${{ github.event.inputs.ROOT_VERSION }}
@@ -85,22 +86,24 @@ jobs:
         with:
           context: .
           file: utils/Dockerfile
-          push: false
+          push: true
           pull: false
           tags: |
             ghcr.io/${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }}
             ghcr.io/${{ env.IMAGE_NAME }}:latest
 
-      - name: Add additional tag to base image
+      - name: Add additional tag to base image and push it
         if: ${{ github.event.inputs.rest-for-physics }}
-        run: docker tag ghcr.io/${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }} ghcr.io/${{ env.IMAGE_NAME }}:rest-for-physics
+        run: |
+          docker tag ghcr.io/${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }} ghcr.io/${{ env.IMAGE_NAME }}:rest-for-physics
+          docker push ghcr.io/${{ env.IMAGE_NAME }}:rest-for-physics
 
       - name: Build development image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: development/Dockerfile
-          push: false
+          push: true
           pull: true
           build-args: |
             CMAKE_CXX_STANDARD=${{ github.event.inputs.CMAKE_CXX_STANDARD }}
@@ -113,16 +116,8 @@ jobs:
             ghcr.io/${{ env.IMAGE_NAME }}-dev:${{ env.VERSION_TAG }}
             ghcr.io/${{ env.IMAGE_NAME }}-dev:latest
 
-      - name: Add additional tag to development image
+      - name: Add additional tag to development image and push it
         if: ${{ github.event.inputs.rest-for-physics }}
-        run: docker tag ghcr.io/${{ env.IMAGE_NAME }}-dev:${{ env.VERSION_TAG }} ghcr.io/${{ env.IMAGE_NAME }}-dev:rest-for-physics
-
-      - name: Push base image
         run: |
-          docker image ls | grep ghcr.io/${{ env.IMAGE_NAME }}
-          docker push --all-tags ghcr.io/${{ env.IMAGE_NAME }}
-
-      - name: Push development image
-        run: |
-          docker image ls | grep ghcr.io/${{ env.IMAGE_NAME }}-dev
-          docker push --all-tags ghcr.io/${{ env.IMAGE_NAME }}-dev
+          docker tag ghcr.io/${{ env.IMAGE_NAME }}-dev:${{ env.VERSION_TAG }} ghcr.io/${{ env.IMAGE_NAME }}-dev:rest-for-physics
+          docker push ghcr.io/${{ env.IMAGE_NAME }}-dev:rest-for-physics
