--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -81,7 +81,7 @@ jobs:
           python3 utils/geant4-dataset-dockerfile.py --image action/${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }} --output utils/Dockerfile
           cat utils/Dockerfile
 
-      - name: Build base image
+      - name: Build and Push base image
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -98,7 +98,7 @@ jobs:
           docker tag ghcr.io/${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }} ghcr.io/${{ env.IMAGE_NAME }}:rest-for-physics
           docker push ghcr.io/${{ env.IMAGE_NAME }}:rest-for-physics
 
-      - name: Build development image
+      - name: Build and Push development image
         uses: docker/build-push-action@v2
         with:
           context: .
