--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -25,7 +25,7 @@ RUN sed -i "/WebGui.HttpPort:/c\WebGui.HttpPort:            9000" $ROOTSYS/etc/s
 RUN pip3 -q install pip --upgrade && \
     pip3 list --outdated --format=freeze | grep -v "^\-e" | cut -d = -f 1 | xargs -n1 pip3 -q install && \
     pip3 -q install uproot awkward metakernel matplotlib scipy pandas mplhep boost_histogram ipympl \
-    numba==0.53 jupyterlab jupyterlab_code_formatter black isort autopep8
+    numba jupyterlab jupyterlab_code_formatter black isort autopep8
 
 RUN mkdir -p /root/Notebooks
 RUN echo "alias start-jupyter='cd /root/Notebooks && jupyter lab --allow-root --ip=0.0.0.0 --port=8888 --no-browser'" >> /root/.bashrc
