--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -47,6 +47,9 @@ RUN chmod 700 /root/.ssh && chmod 600 /root/.ssh/authorized_keys
 
 RUN yes ${PASSWORD} | passwd
 
+# Install my dotfiles
+RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/lobis/dotfiles/main/install.sh)"
+
 # Add Tini
 ENV TINI_VERSION v0.19.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
